--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,78 @@
               </div>
             </div>
           </div>
+
+          <h4 style="text-align: center; color: #97222b">Administration</h4>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="author-box">
+              <h4 style="text-transform: capitalize">Executive Assistant</h4>
+              <div class="author-info">
+                <h5>Promita A</h5>
+                <p class="author-url">
+                  Email:
+                  <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                </p>
+                <p class="author-url">
+                  Phone:
+                  <span><a href="#">8778400261</a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="author-box">
+              <h4 style="text-transform: capitalize">Executive Assistant</h4>
+              <div class="author-info">
+                <h5>Ramkumar R</h5>
+                <p class="author-url">
+                  Email:
+                  <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                </p>
+                <p class="author-url">
+                  Phone:
+                  <span><a href="#">8778400261</a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="author-box">
+              <h4 style="text-transform: capitalize">
+                Caretaker(Jasmine Hostel)
+              </h4>
+              <div class="author-info">
+                <h5>Elakkiya K</h5>
+                <p class="author-url">
+                  Email:
+                  <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                </p>
+                <p class="author-url">
+                  Phone:
+                  <span><a href="#">8778400261</a></span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="author-box">
+              <h4 style="text-transform: capitalize">Guest House Incharge</h4>
+              <div class="author-info">
+                <h5>Gowthaman G</h5>
+                <p class="author-url">
+                  Email:
+                  <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                </p>
+                <p class="author-url">
+                  Phone:
+                  <span><a href="#">8778400261</a></span>
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
