--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
                     Warden - Ashoka Hostel
                   </h4>
                   <div class="author-info">
-                    <h5>Dr. Nachiketa Mishra</h5>
-                    <p class="author-url">
-                      Email:
-                      <span><a href="#">nmishra@iiitdm.ac.in</a></span>
+                    <h5>Dr.Nachiketa Mishra</h5>
+
+                    <p class="author-url" target="_blank">
+                      Email: <span><a href="#">nmishra@iiitdm.ac.in</a></span>
                     </p>
                   </div>
                 </div>
@@ -250,6 +250,42 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <div class="author-img pull-left">
+                    <img src="images/bhwarden.jpg" alt="" />
+                  </div>
+                  <h4 style="text-transform: capitalize">
+                    Warden - Boys Hostel
+                  </h4>
+                  <div class="author-info">
+                    <h5>Dr. Ram Prasad Padhy</h5>
+
+                    <p class="author-url" target="_blank">
+                      Email: <span><a href="#">rampadhy@iiitdm.ac.in</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <div class="author-img pull-left">
+                    <img src="images/ghwarden.jpg" alt="" />
+                  </div>
+                  <h4 style="text-transform: capitalize">
+                    Warden - Girls Hostel
+                  </h4>
+                  <div class="author-info">
+                    <h5>Dr. Debolina Misra</h5>
+                    <p class="author-url">
+                      Email:
+                      <span><a href="#">debolinam@iiitdm.ac.in</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
@@ -259,7 +295,7 @@
 
                   <ul class="arrow nav nav-tabs nav-stacked">
                     <li>
-                      <a href="pdf/Hostel_approval_form.docx" target="_blank"
+                      <a href="pdf/leaveformformat.pdf" target="_blank"
                         >Student Leave Approval Form
                         <!-- <img
                           src="new.gif"
