--- a/rules.html
+++ b/rules.html
@@ -120,12 +120,15 @@
                 that their stay here becomes a worthwhile experience. At
                 institute there is a good blend of academic, cultural, and
                 social experience to all the students, scholars, staffs and
-                faculties. Various co-curricular activities such as designer's
-                club, coding club etc., are coordinated by the respective hostel
-                technical secretary all through the year. Students also enjoy
-                several cultural activities throughout the years conducted at
-                hostel level. In addition to this, many cultural and social
-                activities also happen during the academic year.
+                faculties. Various co-curricular activities such as a coding
+                contest, design challenges and etc, are coordinated by the
+                respective clubs all throughout the year. Various sports
+                tournaments such as basketball, cricket, badminton, etc are
+                coordinated by the respective hostel sports secretary all
+                throughout the year. Students also enjoy several cultural
+                activities throughout the years conducted at hostel level. In
+                addition to this, many cultural and social activities also
+                happen during the academic year.
               </p>
 
               <h4
@@ -153,7 +156,7 @@
               </h4>
 
               <div style="font-weight: 500; font-size: 2rem" id="rules_form">
-                <a href="pdf/Hostel_approval_form.docx" target="_blank"
+                <a href="pdf/leaveformformat.pdf" target="_blank"
                   >Student Leave Application Form</a
                 ><br />
                 <a href="pdf/Guest_Request_Form.pdf" target="_blank"
