--- a/contact.html
+++ b/contact.html
@@ -177,9 +177,9 @@
 
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="author-box">
-              <h4 style="text-transform: capitalize">Executive Assistant</h4>
+              <h4 style="text-transform: capitalize">Promita A</h4>
               <div class="author-info">
-                <h5>Promita A</h5>
+                <h5>Executive Assistant</h5>
                 <p class="author-url">
                   Email:
                   <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
@@ -194,9 +194,9 @@
 
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="author-box">
-              <h4 style="text-transform: capitalize">Executive Assistant</h4>
+              <h4 style="text-transform: capitalize">Ramkumar R</h4>
               <div class="author-info">
-                <h5>Ramkumar R</h5>
+                <h5>Executive Assistant</h5>
                 <p class="author-url">
                   Email:
                   <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
@@ -211,11 +211,9 @@
 
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="author-box">
-              <h4 style="text-transform: capitalize">
-                Caretaker(Jasmine Hostel)
-              </h4>
+              <h4 style="text-transform: capitalize">Elakkiya K</h4>
               <div class="author-info">
-                <h5>Elakkiya K</h5>
+                <h5>Caretaker(Jasmine Hostel)</h5>
                 <p class="author-url">
                   Email:
                   <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
@@ -230,9 +228,9 @@
 
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="author-box">
-              <h4 style="text-transform: capitalize">Guest House Incharge</h4>
+              <h4 style="text-transform: capitalize">Gowthaman G</h4>
               <div class="author-info">
-                <h5>Gowthaman G</h5>
+                <h5>Guest House Incharge</h5>
                 <p class="author-url">
                   Email:
                   <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
