--- a/index.html
+++ b/index.html
@@ -286,6 +286,76 @@
                   </div>
                 </div>
               </div>
+
+              <h4 style="text-align: center; color: #97222b">Administration</h4>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <h4 style="text-transform: capitalize">Promita A</h4>
+                  <div class="author-info">
+                    <h5>Executive Assistant</h5>
+                    <p class="author-url">
+                      Email:
+                      <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                    </p>
+                    <p class="author-url">
+                      Phone:
+                      <span><a href="#">8778400261</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <h4 style="text-transform: capitalize">Ramkumar R</h4>
+                  <div class="author-info">
+                    <h5>Executive Assistant</h5>
+                    <p class="author-url">
+                      Email:
+                      <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                    </p>
+                    <p class="author-url">
+                      Phone:
+                      <span><a href="#">8778400261</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <h4 style="text-transform: capitalize">Elakkiya K</h4>
+                  <div class="author-info">
+                    <h5>Caretaker(Jasmine Hostel)</h5>
+                    <p class="author-url">
+                      Email:
+                      <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                    </p>
+                    <p class="author-url">
+                      Phone:
+                      <span><a href="#">8778400261</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="author-box">
+                  <h4 style="text-transform: capitalize">Gowthaman G</h4>
+                  <div class="author-info">
+                    <h5>Guest House Incharge</h5>
+                    <p class="author-url">
+                      Email:
+                      <span><a href="#">hosteloffice@iiitdm.ac.in</a></span>
+                    </p>
+                    <p class="author-url">
+                      Phone:
+                      <span><a href="#">8778400261</a></span>
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
