--- a/hostel.html
+++ b/hostel.html
@@ -404,8 +404,8 @@
               <ul class="arrow nav nav-tabs nav-stacked">
                 <li><h5>Hostel Affairs Secretary - Boys</h5></li>
                 <li>Manuraj V</li>
-                <li>4th year, EVD19</li>
-                <li>Email: evd19i@iiitdm.ac.in</li>
+                <li>4th year, EVD19I029</li>
+                <li>Email: evd19i029@iiitdm.ac.in</li>
               </ul>
               <br />
             </div>
@@ -428,8 +428,8 @@
               <ul class="arrow nav nav-tabs nav-stacked">
                 <li><h5>Hostel Affairs Secretary - Girls</h5></li>
                 <li>G Krushitha</li>
-                <li>4th year, CS20B1002</li>
-                <li>Email: mmc@iiitdm.ac.in</li>
+                <li>4th year, COE19B049</li>
+                <li>Email: coe19b049@iiitdm.ac.in</li>
               </ul>
               <br />
             </div>
@@ -438,9 +438,9 @@
             <div class="widget">
               <ul class="arrow nav nav-tabs nav-stacked">
                 <li><h5>Hostel Affairs Jt Sec - Girls</h5></li>
-                <li>G Vidyasri</li>
-                <li>4th year,</li>
-                <li>Email: messsec@iiitdm.ac.in</li>
+                <li>Vidhya</li>
+                <li>4th year, COE19B040</li>
+                <li>Email: coe19b040@iiitdm.ac.in</li>
               </ul>
               <br />
             </div>
@@ -452,8 +452,8 @@
               <ul class="arrow nav nav-tabs nav-stacked">
                 <li><h5>Hostel Sports Secretary - Boys</h5></li>
                 <li>Pratham</li>
-                <li>3rd year, CS20B1002</li>
-                <li>Email: mmc@iiitdm.ac.in</li>
+                <li>4th year, EDM19B024</li>
+                <li>Email: edm19b024@iiitdm.ac.in</li>
               </ul>
               <br />
             </div>
@@ -463,8 +463,8 @@
               <ul class="arrow nav nav-tabs nav-stacked">
                 <li><h5>Hostel Sports Secretary - Girls</h5></li>
                 <li>Pranaya Reddy</li>
-                <li>3rd Yer, EE</li>
-                <li>Email: messsec@iiitdm.ac.in</li>
+                <li>4th year, MSM19B030</li>
+                <li>Email: msm19b030@iiitdm.ac.in</li>
               </ul>
               <br />
             </div>
