--- a/mess.html
+++ b/mess.html
@@ -247,8 +247,8 @@
                     <ul class="arrow nav nav-tabs nav-stacked">
                       <li><h5>Mess Affairs Secretary</h5></li>
                       <li>Ajmeera Gireesh Kumar</li>
-                      <li>5th year,</li>
-                      <li>Email: mmc@iiitdm.ac.in</li>
+                      <li>5th year,EVD18I001</li>
+                      <li>Email: evd18i001@iiitdm.ac.in</li>
                     </ul>
                     <br />
                   </div>
@@ -258,8 +258,8 @@
                     <ul class="arrow nav nav-tabs nav-stacked">
                       <li><h5>Mess Affairs Joint Secretary</h5></li>
                       <li>Vishnuvardhan Iyengar</li>
-                      <li>3rd Year, EE</li>
-                      <li>Email: messsec@iiitdm.ac.in</li>
+                      <li>3rd Year, ME20B1007</li>
+                      <li>Email: me20b1007@iiitdm.ac.in</li>
                     </ul>
                     <br />
                   </div>
